# notegram

./: .gitignore  README.md  dbinit.sql  pyproject.toml  python-notegram.service  setup.py  test_notifier.py
notifier/: __init__.py  bot.py  db.py  handler.py  notifier  util.py
src/notegram/: __init__.py  __main__.py  bot.py  db.py  handler.py  util.py
src/notifier/: util.py
