[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notegram"
version = "1.2"
description = "Telegram notifier"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "hiaoxui", email = "hiaoxui@gmail.com" },
]
dependencies = [
    # only needed for centralized server
    # "python-telegram-bot[job-queue]>=22.5",
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notegram"]
